--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootswatch": "^4.5.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.1.0",
+    "prettier": "^2.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
