--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.1.0",
     "@auth0/angular-jwt": "^5.0.1",
     "@kolkov/ngx-gallery": "^1.2.3",
+    "@microsoft/signalr": "^5.0.1",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.5.2",
     "bootswatch": "^4.5.2",
